--- a/package.json
+++ b/package.json
@@ -1,13 +1,23 @@
 {
   "dependencies": {
+    "@sentry/node": "5.15.5",
     "bcryptjs": "^2.4.3",
+    "bee-queue": "^1.2.3",
+    "date-fns": "^2.0.0-beta.5",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "express-handlebars": "^4.0.3",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.9",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.6",
+    "nodemailer-express-handlebars": "^4.0.0",
     "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
     "promisify": "^0.0.3",
     "sequelize": "^5.21.5",
+    "sucrase": "^3.14.0",
+    "youch": "^2.0.10",
     "yup": "^0.28.3"
   },
   "name": "bootcampo",
@@ -16,6 +26,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/server.js",
+    "queue": "nodemon src/queue.js",
     "dev:debug": "nodemon --inspect src/server.js"
   },
   "devDependencies": {
@@ -26,7 +37,6 @@
     "eslint-plugin-prettier": "^3.1.2",
     "nodemon": "^2.0.2",
     "prettier": "^1.19.1",
-    "sequelize-cli": "^5.5.1",
-    "sucrase": "^3.12.1"
+    "sequelize-cli": "^5.5.1"
   }
 }
